updated auth url

--- a/static/index.html
+++ b/static/index.html
@@ -43,6 +43,9 @@
     <div id="map">
     </div>
   <div id="userinput">
+    <!-- <div class="logo">
+      <h1 class="neon">FindMeVents</h1>
+    </div> -->
     <div class="contols">
       <input id="location" type="text" placeholder="Location"></input>
       <Select id="Day" name="day">
@@ -58,6 +61,9 @@
       <Select id="event" name="event">
         <option value="All">All Events</option>
         <option value="Trivia">Trivia</option>
+        <option value="Karaoke">Karaoke</option>
+        <option value="Open Mic">Open Mic</option>
+        <option value="Comedy">Comedy</option>
       </select>
 
       </div>
