added more event types and markers

--- a/static/add.html
+++ b/static/add.html
@@ -48,7 +48,10 @@
 
     <tr> <td>Type:</td><td>
       <Select id="etype">
-        <option value="Trivia">Trivia</option>
+      <option value="Trivia">Trivia</option>
+      <option value="Karaoke">Karaoke</option>
+      <option value="Open Mic">Open Mic</option>
+      <option value="Comedy">Comedy</option>
       </select>
     </td></tr>
 
