--- a/static/index.html
+++ b/static/index.html
@@ -86,6 +86,9 @@
       <Select id="startevent" name="event">
         <option value="All">All Events</option>
         <option value="Trivia">Trivia</option>
+        <option value="Karaoke">Karaoke</option>
+        <option value="Open Mic">Open Mic</option>
+        <option value="Comedy">Comedy</option>
       </select>
   </div>
   <div class="right">
