--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <link rel="shortcut icon" type="image/png" href="favicon.png?v=1"/>
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
