--- a/static/index.html
+++ b/static/index.html
@@ -1,10 +1,7 @@
 <html>
 <head>
 
-  <meta
-     name='viewport'
-     content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
-     />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="shortcut icon" type="image/png" href="favicon.png?v=1"/>
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <script
