--- a/static/add.html
+++ b/static/add.html
@@ -40,12 +40,13 @@
 <div id="addinput">
   <form>
     <table>
+      <tr class="instruction one"><td colspan="2"> Step 1: Search for the location on the map </td></tr>
     <tr> <td>Search: </td><td><input id="location" type="text" placeholder="Location"></input></td></tr>
-    <tr> <td>Name:</td><td><input type="text" id="name" value="tanner"> </input> </td></tr>
-    <tr> <td>MapID:</td><td><input type="text" id="mapsid"> </input> </td></tr>
-    <tr> <td>Lat: </td><td><input type="number" id="lat" step="0.0000001" value="49.270995"></input></td> </tr>
-    <tr> <td>Long:</td><td><input type="number" id="long" step="0.0000001" value="-123.156155"></input></td></tr>
-
+    <tr style="display:none"> <td>Name:</td><td><input  type="text" id="name" value="tanner"> </input> </td></tr>
+    <tr style="display:none"> <td>MapID:</td><td><input  type="text" id="mapsid"> </input> </td></tr>
+    <tr style="display:none"> <td>Lat: </td><td><input  type="number" id="lat" step="0.0000001" value="49.270995"></input></td> </tr>
+    <tr style="display:none"> <td>Long:</td><td><input  type="number" id="long" step="0.0000001" value="-123.156155"></input></td></tr>
+      <tr class="instruction two"><td colspan="2"> Step 2: Choose an event class </td></tr>
     <tr> <td>Type:</td><td>
       <Select id="etype">
       <option value="Trivia">Trivia</option>
@@ -54,7 +55,7 @@
       <option value="Comedy">Comedy</option>
       </select>
     </td></tr>
-
+    <tr class="instruction three"><td colspan="2"> Step 3: Choose a day of the week </td></tr>
     <tr> <td>Day: </td><td>
       <Select id="dayInput" name="day">
         <option value="Monday">Monday</option>
@@ -66,6 +67,7 @@
         <option value="Sunday">Sunday</option>
       </select>
       </td></tr>
+      <tr class="instruction four"><td colspan="2"> Step 4: Any event datails? Start time? Prizes? </td></tr>
       <tr> <td>Comments</td><td><textarea id="comments"></textarea></td></tr>
 
     </table>
