add button to add event, change info window style

--- a/static/index.html
+++ b/static/index.html
@@ -68,7 +68,7 @@
         <option value="Open Mic">Open Mic</option>
         <option value="Comedy">Comedy</option>
       </select>
-
+      <a class="addbutton" href="add.html"><i class="Add Square icon"></i>Add event</a>
       </div>
     </div>
 
@@ -118,6 +118,7 @@
 </div>
 <div class="adminlogin">
   <a href="login"><i class="Configure icon"></i></a>
+  <!-- <a href="about"><i class="Info icon"></i></a> -->
 </div>
 
 </body>
