--- a/static/index.html
+++ b/static/index.html
@@ -34,6 +34,16 @@
   <script src="google-places.js"></script>
   <link href="google-places.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105645822-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-105645822-2');
+  </script>
 </head>
 
 
