--- a/static/index.html
+++ b/static/index.html
@@ -34,6 +34,14 @@
   <script src="google-places.js"></script>
   <link href="google-places.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script>
+           var script = '<script src="infobubble';
+           if (document.location.search.indexOf('compiled') !== -1) {
+             script += '-compiled';
+           }
+           script += '.js"><' + '/script>';
+           document.write(script);
+  </script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105645822-2"></script>
