add send on facebook button

--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,11 @@
 <html>
 <head>
-
+  <title>We Never Do Anything</title>
+  <meta property="og:url"           content="https://weneverdoanything.com" />
+  <meta property="og:type"          content="website" />
+  <meta property="og:title"         content="We Never Do Anything" />
+  <meta property="og:description"   content="Find fun bar events near you!" />
+  <meta property="og:image"         content="https://weneverdoanything.com/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="shortcut icon" type="image/png" href="favicon.png?v=1"/>
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
@@ -50,6 +55,16 @@
 
 
 <body>
+    <!-- Load Facebook SDK for JavaScript -->
+   <div id="fb-root"></div>
+   <script>(function(d, s, id) {
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) return;
+     js = d.createElement(s); js.id = id;
+     js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));</script>
+
   </div>
   <div class="ui right sidebar">
 
