add alert of suggested event

--- a/static/add.html
+++ b/static/add.html
@@ -18,7 +18,7 @@
        fjs.parentNode.insertBefore(js, fjs);
      }(document, 'script', 'facebook-jssdk'));
  </script>
-  <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="addstyle.css">
   <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -71,7 +71,7 @@
       <tr> <td>Comments</td><td><textarea id="comments"></textarea></td></tr>
 
     </table>
-    <a href="#" class="submitCreate"><h1>Submit</h1></a>
+    <a href="#" class="submitCreate">Submit</a>
   </form>
   <div class="resultsOut"></div>
 </div>
