reorganize images into folder

--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
   <meta property="og:description"   content="Find fun bar events near you!" />
   <meta property="og:image"         content="https://weneverdoanything.com/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <link rel="shortcut icon" type="image/png" href="favicon.png?v=1"/>
+  <link rel="shortcut icon" type="image/png" href="images/favicon.png?v=1"/>
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
