reorganize static files

--- a/static/index.html
+++ b/static/index.html
@@ -13,9 +13,9 @@
     src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
-    <script src="infobubble.js"></script>
-  <script type="text/javascript" src="mapstyle.js"></script>
-  <script src="javascript.js"></script>
+    <script src="js/infobubble.js"></script>
+  <script type="text/javascript" src="js/mapstyle.js"></script>
+  <script src="js/javascript.js"></script>
 
   <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
   </script>
@@ -37,8 +37,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/icon.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/grid.css" rel="stylesheet">
 
-  <script src="google-places.js"></script>
-  <link href="google-places.css" rel="stylesheet">
+  <script src="google-places/google-places.js"></script>
+  <link href="google-places/google-places.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
 
@@ -95,7 +95,7 @@
         <option value="Open Mic">Open Mic</option>
         <option value="Comedy">Comedy</option>
       </select>
-      <a class="addbutton" href="add.html"><i class="Add Square icon"></i>Add event</a>
+      <a class="addbutton" href="add/add.html"><i class="Add Square icon"></i>Add event</a>
       </div>
     </div>
 
