fix relative paths of add.html

--- a/static/add/add.html
+++ b/static/add/add.html
@@ -18,7 +18,7 @@
        fjs.parentNode.insertBefore(js, fjs);
      }(document, 'script', 'facebook-jssdk'));
  </script>
-   <link rel="stylesheet" href="add/addstyle.css">
+   <link rel="stylesheet" href="addstyle.css">
   <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -26,7 +26,7 @@
   <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
   </script>
 
-  <script src="add/add.js">
+  <script src="add.js">
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxoB_lMLGScuwVei5rmN-usckcNu_tMj0&libraries=places&callback=initAutocomplete"
        async defer></script>
